<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/dl">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeelingActivity"
    android:background="#EAFDFC">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
    <TextView
        android:id="@+id/howAreYou"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Як ви сьогодні?"
        android:textSize="30dp"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/howAreYou" />


    <TextView
        android:id="@+id/feeling"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Симптоми"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feeling">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">


            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/imageButtonTemper"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:background="#00E0FFFD"
                        app:srcCompat="@drawable/ic_icon_feeling_1" />

                    <ImageView
                        android:id="@+id/tick1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="70dp"
                        android:layout_marginTop="75dp"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/ic_icon_feeling_6" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/temperature"
                    style="@style/text_style"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:text="@string/temperRase"
                    android:textAlignment="center"
                    android:textSize="17dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/imageButtonCough"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:background="#00E0FFFD"
                        app:srcCompat="@drawable/ic_icon_feeling_2" />

                    <ImageView
                        android:id="@+id/tick2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="75dp"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/ic_icon_feeling_6" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/cough"
                    style="@style/text_style"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:text="@string/cough"
                    android:textAlignment="center"
                    android:textSize="17dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/imageButtonEating"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:background="#00E0FFFD"
                        app:srcCompat="@drawable/ic_icon_feeling_3" />

                    <ImageView
                        android:id="@+id/tick3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="70dp"
                        android:layout_marginTop="75dp"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/ic_icon_feeling_6" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/appetite"
                    style="@style/text_style"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:text="@string/appetite"
                    android:textAlignment="center"
                    android:textSize="17dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/imageButtonStomach"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:background="#00E0FFFD"
                        app:srcCompat="@drawable/ic_icon_feeling_4" />

                    <ImageView
                        android:id="@+id/tick4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="70dp"
                        android:layout_marginTop="75dp"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/ic_icon_feeling_6" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/stomach"
                    style="@style/text_style"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:text="@string/digestive_problems"
                    android:textAlignment="center"
                    android:textSize="17dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/imageButtonMood"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:background="#00E0FFFD"
                        app:srcCompat="@drawable/ic_icon_feeling_5" />

                    <ImageView
                        android:id="@+id/tick5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="70dp"
                        android:layout_marginTop="75dp"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/ic_icon_feeling_6" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/mood"
                    style="@style/text_style"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:text="@string/bad_mood"
                    android:textAlignment="center"
                    android:textSize="17dp" />
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

        <TextView
            android:id="@+id/textView2"
            style="@style/text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:text="Ваш коментар:" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            style="@style/edittext_view_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <Button
            android:id="@+id/saveSymptomData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="Зберегти данні" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
        tools:context=".FeelingActivity">

        <include layout="@layout/content_days_feelings" />
    </RelativeLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu"
        />
</androidx.drawerlayout.widget.DrawerLayout>